add new speed keys to the horse creation process